@@ -1,5 +1,10 @@
 $: << File.dirname(__FILE__)
 require 'ostruct'
+
+require 'active_support'
+require 'active_support/version'
+require 'active_support/multibyte' if ::ActiveSupport::VERSION::MAJOR >= 3
+
 require 'fixed_width/core_ext/symbol'
 require 'fixed_width/fixed_width'
 require 'fixed_width/definition'
