@@ -1,3 +1,4 @@
 require 'rubygems'
 require 'spec'
 require File.expand_path(File.join(File.dirname(__FILE__), '..', 'lib', 'fixed_width'))
+require 'active_support/inflector' if ::ActiveSupport::VERSION::MAJOR >= 3
